ensure proper spacing between cards

--- a/assets/styles/fluvio.scss
+++ b/assets/styles/fluvio.scss
@@ -230,7 +230,7 @@ footer {
 
 .main {
   .card {
-    margin: 0 auto;
+    margin: .8rem auto;
     float: none;
     width: 18rem;
   }
